# TFG_eslabon_rigidez_variable

./: README.md
Códigos IDE Arduino/Codigo_vacio_desvacio_buff/: Codigo_vacio_desvacio_buff.ino
Códigos IDE Arduino/Experimento_1/: Experimento_1.ino
Códigos IDE Arduino/TFG_circuito/: TFG_circuito.ino
Códigos IDE Arduino/sensorFuerza/: sensorFuerza.ino
Motor_dynamixel/include/: main.h
Motor_dynamixel/src/dynamixel_ros_library/: CMakeLists.txt  README.md  package.xml
Motor_dynamixel/src/dynamixel_ros_library/docs/: deps.md  main.tex
Motor_dynamixel/src/dynamixel_ros_library/include/dynamixel_ros_library/: dynamixel_ros_library.h
Motor_dynamixel/src/dynamixel_ros_library/src/: blinkingLED.cpp  dmxlParamsMonitor.cpp  dynamixel_ros_library.cpp  fsm_3_fingers.cpp  fsm_4_fingers.cpp  realTest.cpp  rolling_3_fingers.cpp  rolling_4_fingers.cpp  testCommunication.cpp  testPWMControl.cpp  testPositionControl.cpp
Motor_dynamixel/src/jamming_experiments/: CMakeLists.txt  package.xml
Motor_dynamixel/src/jamming_experiments/launch/: serial_nodes.launch
Motor_dynamixel/src/jamming_experiments/src/: jamming.cpp
Representación_experimentos/: Experimento_3.py  Experimento_4.py
exe/: iniciar_experimento.sh
