<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_ros_library</name>
  <version>1.0.1</version>
  <description>The dynamixel_ros_library package</description>

  <author email="maksymsaldat2001@gmail.com">maxxx</author>
  <maintainer email="jmgandarias@uma.es">jmgandarias</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://github.com/TaISLab/dynamixel_ros_library</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
</package>
